--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BookKeeper</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./Assets/style.css"
+    <link rel="stylesheet" href="./Assets/style.css">
 
  </head>
   <body>
@@ -32,6 +32,6 @@
 
 
 
- 
+    <script src="./Assets/script.js"></script>
   </body>
 </html>
