added the colored backgrounds in CSS for Nav, the Aside, and main

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
  </head>
   <body>
     <header class="header">
-        <nav>
             <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">Book list</button> 
             <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
               <div class="offcanvas-header">
@@ -21,10 +20,18 @@
                 <p></p>
               </div>
             </div>
-        </nav>
         <h1>BookKeeper</h1>
-
     </header>
+   <nav>
+   </nav>
+   <aside>
+    <h2>Set Current Goal:</h2>
+   </aside>
+   <main>
+    <h1>Reading Notes</h1>
+  
+   </main>
+
 
 
 
