added add new book button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <p></p>
               </div>
             </div>
+            
+            <button class="btn btn-primary" id="add-book-button" style="float: right">Add new book</button>
         </nav>
         <h1>BookKeeper</h1>
 
