Tried to tidy up aside

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./Assets/style.css"
 
  </head>
+
   <body>
     <header class="header">
             <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">Book list</button> 
@@ -25,7 +26,7 @@
    <nav>
    </nav>
    <aside>
-    <h2>Set Current Goal:</h2>
+    <h2>Set Current Goal: <br> Read Pages: <br> Add Reading Notes:</h2> 
    </aside>
    <main>
     <h1>Reading Notes</h1>
