added text boxes to aside

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
    <nav>
    </nav>
    <aside>
-    <h2>Set Current Goal: <br> Read Pages: <br> Add Reading Notes:</h2> 
+    <h2>Set Current Goal: <br>
+      <input type="text" id=:"goal" name="goal">
+      <br> Read Pages: <br> 
+      <input type="text" id="read" name="read"> <br>
+       Add Reading Notes: <br>
+      <input type="text" id="Add reading notes" name="Add reading notes"></h2> 
    </aside>
    <main>
     <h1>Reading Notes</h1>
