adjusted size of goal and read pages boxes

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
    </nav>
    <aside>
     <h2>Set Current Goal: <br>
-      <input type="text" id=:"goal" name="goal">
+      <input type="text" id="txtbox" name="goal">
       <br> Read Pages: <br> 
-      <input type="text" id="read" name="read"> <br>
+      <input type="text" id="txtbox" name="read"> <br>
        Add Reading Notes: <br>
-      <input type="text" id="Add reading notes" name="Add reading notes"></h2> 
+      <input type="text" id="box" name="Add reading notes"></h2> 
    </aside>
    <main>
     <h1>Reading Notes</h1>
