fixed coloring on section box

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </header>
    <nav>
    </nav>
-   <aside>
+   <main>
+    <aside>
     <h2>Set Current Goal: <br>
       <input type="text" id="txtbox" name="goal">
       <br> Read Pages: <br> 
@@ -33,10 +34,14 @@
        Add Reading Notes: <br>
       <input type="text" id="box" name="Add reading notes"></h2> 
    </aside>
-   <main>
-    <h1>Reading Notes</h1>
-  
-   </main>
+   <section>
+    <h3>Reading Notes<br> 
+      <input type="text" id="notes" name="notes"></h3>
+   </section>   
+    </main>
+   <footer>
+
+   </footer>
 
 
 
