made changes to the add new book button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
         </nav>
         <h1>BookKeeper</h1>
 
+        <div class="input-container" id="inputs">
+          <input style="margin-bottom: 4px;" type="text" id="bName" placeholder="Enter book title"/>
+          <br>
+          <input style="margin-bottom: 4px;" type="text" id="bAuthor" placeholder="Enter book author"/>
+          <br>
+          <input style="margin-bottom: 4px;" type="text" id="pgCount" placeholder="Enter # of pages"/>
+          <br>
+          <button onclick="storeBookInfo()">Submit</button>
+        </div>
+        
     </header>
+
 
 
 
