--- a/index.html
+++ b/index.html
@@ -23,19 +23,32 @@
             </div>
         <h1>BookKeeper</h1>
     </header>
-   <nav>
-   </nav>
+    <nav>
+      <h2>Book Name <br> Author</h2>
+      <h2 style="color:black; text-align: center;">Page Count:</h2>
+      <h2 style="color:black; text-align: right;"> Page Goal:</h2>
+     </nav>
    <main>
     <aside>
     <h2>Set Current Goal: <br>
-      <input type="text" id="txtbox" name="goal">
+      <form action="" method="">
+        <input type="text" name="Set current goal">
+        <button type="submit">Submit</button>
+      </form>
       <br> Read Pages: <br> 
-      <input type="text" id="txtbox" name="read"> <br>
+      <form action="" method="">
+        <input type="text" name="Read Pages">
+        <button type="submit">Submit</button>
+      </form>
        Add Reading Notes: <br>
-      <input type="text" id="box" name="Add reading notes"></h2> 
+       <form action="" method="">
+        <input type="text" name="Add Reading Notes">
+        <button type="submit">Submit</button>
+      </form> 
    </aside>
    <section>
     <h3>Reading Notes<br> 
+      <div id="container"></div>
       
    </section>   
     </main>
