aded p tag IDs for page count and page goal

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </header>
     <nav>
       <h2>Book Name <br> Author</h2>
-      <h2 style="color:black; text-align: center;">Page Count:</h2>
-      <h2 style="color:black; text-align: right;"> Page Goal:</h2>
+      <h2 style="color:black; text-align: center;">Page Count:</h2><p id="page count"></p>
+      <h2 style="color:black; text-align: right;"> Page Goal:</h2><p id="read pages"><p id="page goal"></p>
      </nav>
    <main>
     <aside>
@@ -45,7 +45,7 @@
       </form>
        Add Reading Notes: <br>
        <form action="" method="">
-        <input type="text" name="Add Reading Notes">
+        <textarea type="text" name="Add Reading Notes">
         <button type="submit">Submit</button>
       </form> 
    </aside>
