added unformated status bar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,53 @@
         <h1>BookKeeper</h1>
 
     </header>
+    <nav>
+      <div class="subtitles">
+        <h3>Book Name</h3>
+        <h3>Author</h3>
+        <h3>Page Count</h3>
+        <h3>Page Goal</h3>
+      </div>
+     </nav>
+   <main>
+    <aside>
+    <h2>Set Current Goal: <br>
+      <form action="" method="">
+        <input type="text" name="Set current goal">
+        <button type="submit">Submit</button>
+      </form>
+      <br> Read Pages: <br> 
+      <form action="" method="">
+        <input type="text" name="Read Pages">
+        <button type="submit">Submit</button>
+      </form>
+       <br> Add Reading Notes: <br>
+       <form action="" method="">
+        <input type="text" name="Add Reading Notes">
+        <button type="submit">Submit</button>
+      </form> 
+   </aside>
+   <section>
+    <h3>Reading Notes<br> 
+      <div id="container"></div>
+   </section> 
+   
+   <br>
+
+   <div class = "status">
+    <label for="Book Status">Book Status:</label>
+    <select name="Book Status" id="Book Status" class = content>
+      <option diabled value=""></option>
+      <option value = "Completed"> Completed</option>
+      <option value = "In Progress">In Progress</option>
+      <option value = "Pending">Pending</option>
+    </select>
+  </div>
+  
+    </main>
+   <footer>
+
+   </footer>
 
 
 
