Implemented IDs in pklace of names on Set current goal, read pages, and add reading notes. Also added onclick to buttons as well as converted add reading notes into a textarea

--- a/index.html
+++ b/index.html
@@ -28,28 +28,28 @@
     </header>
     <nav>
       <div class="subtitles">
-        <h3>Book Name</h3>
-        <h3>Author</h3>
-        <h3>Page Count</h3>
-        <h3>Page Goal</h3>
+        <h2 id="">Book Name</h2>
+        <h4 id="">Author</h4>
+        <h3>Page Count<p id="page count"></p></h3>
+        <h3>Page Goal<p id="read pages"><p id="page goal"></p></h3>
       </div>
      </nav>
    <main>
     <aside>
     <h2>Set Current Goal: <br>
       <form action="" method="">
-        <input type="text" name="Set current goal">
-        <button type="submit">Submit</button>
+       <input type="text" id="">
+        <button onclick="">Submit</button>
       </form>
       <br> Read Pages: <br> 
       <form action="" method="">
-        <input type="text" name="Read Pages">
-        <button type="submit">Submit</button>
+        <input type="text" id="">
+        <button onclick="">Submit</button>
       </form>
        <br> Add Reading Notes: <br>
        <form action="" method="">
-        <input type="text" name="Add Reading Notes">
-        <button type="submit">Submit</button>
+        <textarea type="text" id=""></textarea>
+        <button onclick="">Submit</button>
       </form> 
    </aside>
    <section>
