--- a/index.html
+++ b/index.html
@@ -30,29 +30,27 @@
     </header>
     <nav>
       <div class="subtitles">
-        <h2 id="">Book Name</h2>
-        <h4 id="">Author</h4>
-        <h3>Page Count<p id="page count"></p></h3>
-        <h3>Page Goal<p id="read pages"><p id="page goal"></p></h3>
+        <h2 id="bn">Book Name:</h2>
+        <h4 id="at">Author:</h4>
+        <div class="books">
+          <h3>Page<br> Count:<p id="page count"></p></h3>
+          <h3>Page<br>Goal:<p id="read pages"><p id="page goal"></p></h3>
+        </div>
       </div>
 
      </nav>
    <main>
     <aside>
     <h2>Set Current Goal: <br>
-      <form action="" method="">
        <input type="text" id="">
         <button onclick="">Submit</button>
       </form>
       <br> Read Pages: <br> 
-      <form action="" method="">
         <input type="text" id="">
         <button onclick="">Submit</button>
       </form>
 
        <br> Add Reading Notes: <br>
-
-       <form action="" method="">
         <textarea type="text" id=""></textarea>
         <button onclick="">Submit</button>
       </form> 
