Aligned the submit button on Add Reading Notes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </form>
 
        <br> Add Reading Notes: <br>
-        <textarea type="text" id=""></textarea>
+        <textarea type="textbox" id=""></textarea>
         <button onclick="">Submit</button>
       </form> 
    </aside>
