fixed spacing between Goal/Pages/Notes

--- a/index.html
+++ b/index.html
@@ -45,15 +45,18 @@
        <input type="text" id="">
         <button onclick="">Submit</button>
       </form>
-      <br> Read Pages: <br> 
+    </h2>
+     <h2><br> Read Pages: <br> 
         <input type="text" id="">
         <button onclick="">Submit</button>
       </form>
-
+     </h2>
+      <h2>
        <br> Add Reading Notes: <br>
         <textarea type="textbox" id=""></textarea>
         <button onclick="">Submit</button>
-      </form> 
+      </form>
+      </h2> 
    </aside>
    <section>
     <h3>Reading Notes<br> 
