added margins around the reading notes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </h2> 
    </aside>
    <section>
-    <h3>Reading Notes<br> 
+    <h3>&nbsp;&nbsp;&nbsp;Reading Notes:<br> 
       <div id="container"></div>
    </section> 
    
