--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
    <main>
     <aside>
     <h2>Set Current Goal: <br>
-      <form action="" method="">
         <input type="text" name="Set current goal">
-        <button type="submit">Submit</button>
-      </form>
+        <button type="submit" onclick="currentGoal()">Submit</button>
+        <p id="message"></p>
       <br> Read Pages: <br> 
       <form action="" method="">
         <input type="text" name="Read Pages">
