added if else statement

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="./Assets/style.css">
 
  </head>
+
   <body>
     <header class="header">
-        <nav>
-            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">Book list</button> 
+            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i class="bi bi-list"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+            </svg></i></button> 
             <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
               <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Your list of books</h5>
+                <pre><h5 class="offcanvas-title" id="offcanvasScrollingLabel">Your list of books           <hr></h5></pre>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>
               <div class="offcanvas-body">
@@ -25,35 +27,42 @@
             <button class="btn btn-primary" id="add-book-button" style="float: right">Add new book</button>
         </nav>
         <h1>BookKeeper</h1>
-
     </header>
     <nav>
       <div class="subtitles">
-        <h3>Book Name</h3>
-        <h3>Author</h3>
-        <h3>Page Count</h3>
-        <h3>Page Goal</h3>
+        <h2 id="bn">Book Name:</h2>
+        <h4 id="at">Author:</h4>
+        <div class="books">
+          <h3>Page<br> Count:<p id="page count"></p></h3>
+          <h3>Page<br>Goal:<p id="read pages"><p id="page goal"></p></h3>
+        </div>
       </div>
+
      </nav>
    <main>
     <aside>
     <h2>Set Current Goal: <br>
-        <input type="text" name="Set current goal">
-        <button type="submit" onclick="currentGoal()">Submit</button>
-        <p id="message"></p>
-      <br> Read Pages: <br> 
-      <form action="" method="">
-        <input type="text" name="Read Pages">
-        <button type="submit">Submit</button>
+       <input type="text" id="numberInput">
+        <button onclick="currentGoal()">Submit</button>
+      </h2>
+      <p id="message"></p>
+    </aside>
+  </form>
+    </h2>
+     <h2><br> Read Pages: <br> 
+        <input type="text" id="">
+        <button onclick="">Submit</button>
       </form>
+     </h2>
+      <h2>
        <br> Add Reading Notes: <br>
-       <form action="" method="">
-        <input type="text" name="Add Reading Notes">
-        <button type="submit">Submit</button>
-      </form> 
+        <textarea type="textbox" id=""></textarea>
+        <button onclick="">Submit</button>
+      </form>
+      </h2> 
    </aside>
    <section>
-    <h3>Reading Notes<br> 
+    <h3>&nbsp;&nbsp;&nbsp;Reading Notes:<br> 
       <div id="container"></div>
    </section> 
    
@@ -68,6 +77,7 @@
       <option value = "Pending">Pending</option>
     </select>
   </div>
+
   
     </main>
    <footer>
